# songbook

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  FIXY 11.22  Procfile  README.md  TeXcompile.py  ToCedit.py  additional_files.rar  app.py  categories.cfg  chordShift.py  config.json  fileConfig.json  frozen_flask.py  latexheader.txt  new.py  notes.txt  plAlphabetSort.py  pyproject.toml  requirements-gui.txt  requirements.txt  requirements_deploy.txt  requirements_full.txt  sanitizeInput.py  setup.py  songJSONmaker.py  songbook.py  songbook.tex  songbookDisplay.py  songbookTeXmaker.py  songbook_pdf.py  songbook_preview.py  songbook_tex.py  songbook_web.py  tocEdit.py  wsgi.py
.circleci/: config.yml
.github/: CONTRIBUTING.md  README.md
.github/workflows/: build_pdf.yml  changelog.yml  main.yml  render.yml
SDM/: Majka  Piosenka dla Wojtka Bellona.sng
Turystyczne/: Sponad kufla piwa.sng
apps/: create_pdf.py  display.py  freeze_flask.py  run_flask.py  run_gui.py
data/: categories.cfg  categories.json  latexheader.txt
data/.old/: Aicha.sng  Będziesz moją Panią.sng  Co mi Panie dasz.sng  Cykady Na Cykladach.sng  Czarne Oczy.sng  Czeska szanta.sng  Englishman in New York.sng  Guaranteed.sng  Hahahaczyk.sng  I nawet mam już ten dom.sng  Irlandia zielona.sng  Kara Barabasza.sng  Kołysanka Dla Nieznajowej.sng  Krowa.sng  Szałasolot.sng  (+4 more)
data111/: categories.json
forms/: forms.py
src/: TeXcompile.py  ToCedit.py  headerconfig.py  songJSONmaker.py  songbookTeXmaker.py
static/: style.css
templates/: song.html  songList.html
(+1163 files in other folders)
